# burn-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
bigram/: Cargo.toml
bigram/src/: data.rs  inference.rs  main.rs  model.rs  tokenizer.rs  training.rs
fashion_mnist/: Cargo.toml
fashion_mnist/src/: data.rs  inference.rs  main.rs  model.rs  training.rs
yolo_v1/: Cargo.toml
yolo_v1/src/: data.rs  inference.rs  main.rs  model.rs  training.rs
