[package]
name = "fashion_mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.12.1", features = ["train", "wgpu", "vision", "accelerate", "metal"] }
dirs = "5.0.1"
serde = "1.0.196"
