[package]
name = "yolo_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.12.1", features = ["train", "wgpu", "vision", "accelerate", "metal"] }
derive-new = "0.6.0"
image = "0.23"
rand = "0.8"
xml = "0.8.10"
